--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=
-sonar.projectName=
+sonar.projectKey=project:sonarqube-sample
+sonar.projectName=sonarqube-sample
 sonar.projectVersion=1.0
 sonar.sources=
 sonar.language=py
