sonarqube properties file added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=project:sonarqube-sample
-sonar.projectName=sonarqube-sample
+sonar.projectName=sonarqube-sample1
 sonar.projectVersion=1.0
 sonar.sources=
 sonar.language=py
@@ -12,3 +12,4 @@ sonar.python.coverage.reportPath=coverage.xml
 #sonar.python.pylint=/usr/local/bin/pylint
 #sonar.python.pylint_config=.pylintrc
 #sonar.python.pylint.reportPath=pylint-report.txt
+sonar.host.url=http://10.29.41.148:9000
